objects/Patient_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Existing_Conditions__c</fullName>
        <label>Pre-Existing Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Condition 1</fullName>
                </value>
                <value>
                    <fullName>Condition 2</fullName>
                </value>
                <value>
                    <fullName>Condition 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Care_Provider__c</fullName>
        <label>Primary Care Provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Patient Profile</label>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>